# ansible-role-resolved

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
vars/: main.yml
