[project]
name = "resolved"
version = "0.0.0"
description = "Ansible role for setting up systemd-resolved."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["systemd", "resolved"]
repository = "https://github.com/jam82/ansible-role-resolved"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
